[gd_scene load_steps=3 format=2]

[ext_resource path="res://Camera/Camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Camera" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.1, 1.1 )
smoothing_enabled = true

[node name="TrackSpawner" type="Area2D" parent="."]
position = Vector2( 240, -416 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackSpawner"]
shape = SubResource( 1 )

[node name="SpawnPoint" type="Node2D" parent="TrackSpawner"]
position = Vector2( -240, -48 )

[node name="TrackRemover" type="Area2D" parent="."]
position = Vector2( 240, -416 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackRemover"]
position = Vector2( 0, 840 )
shape = SubResource( 1 )
[connection signal="area_exited" from="TrackSpawner" to="." method="_on_ScreenEdge_area_exited"]
[connection signal="area_exited" from="TrackRemover" to="." method="_on_TrackRemover_area_exited"]
